존스홉킨스 데이터 추가

--- a/index.html
+++ b/index.html
@@ -2045,6 +2045,9 @@
     // 배너를 숨기고 싶으면 아래 코드를 주석처리하세요
     //showBanner();
   </script>
+  
+  <!-- 존스홉킨스 전세계 누적데이터 -->
+  <script src="HopkinsCoronaWorldData.js"></script>
 </body>
 
 </html>
