입도객 날짜 수정 및 존스홉킨스데이터 링크 첨가

--- a/index.html
+++ b/index.html
@@ -1764,6 +1764,7 @@
                       <li>해외 데이터 : <a href="https://github.com/LiveCoronaDetector/livecod/tree/master/data" target="_blank">저장소로 바로가기</a>, <a href="https://livecorona.co.kr/data/worldData.js" target="_blank">사용가능한 URL 바로가기</a></li>
                       <li>한국 누적 데이터 : <a href="https://github.com/LiveCoronaDetector/livecod/tree/master/data" target="_blank">저장소로 바로가기</a>, <a href="https://livecorona.co.kr/data/koreaRegionalCumulativeData.js" target="_blank">사용가능한 URL 바로가기</a></li>
                       <li>세계 누적 데이터 : <a href="https://github.com/LiveCoronaDetector/livecod/tree/master/data" target="_blank">저장소로 바로가기</a>, <a href="https://livecorona.co.kr/data/worldCumulativeData.js" target="_blank">사용가능한 URL 바로가기</a></li>
+                      <li>존스홉킨스 세계 확진자, 사망자, 완치자 누적 데이터 : <a href="https://github.com/LiveCoronaDetector/livecod/tree/master/data" target="_blank">저장소로 바로가기</a>, <a href="https://livecorona.co.kr/data/HopkinsCoronaWorldData.js" target="_blank">사용가능한 URL 바로가기</a></li>
 
                     </ul>
                     <p class="text-right">
@@ -2045,7 +2046,7 @@
     // 배너를 숨기고 싶으면 아래 코드를 주석처리하세요
     //showBanner();
   </script>
-  
+
   <!-- 존스홉킨스 전세계 누적데이터 -->
   <script src="HopkinsCoronaWorldData.js"></script>
 </body>
