크롤러 수정

--- a/index.html
+++ b/index.html
@@ -2048,7 +2048,7 @@
   </script>
 
   <!-- 존스홉킨스 전세계 누적데이터 -->
-  <script src="HopkinsCoronaWorldData.js"></script>
+  <!-- <script src="HopkinsCoronaWorldData.js"></script> -->
 </body>
 
 </html>
