--- a/index.html
+++ b/index.html
@@ -515,6 +515,7 @@
                   <a target="_blank" class="btn btn-primary" style="width:100%;margin-bottom:1rem;" href="https://news.naver.com/main/factcheck/main.nhn" role="button">코로나19 바이러스 관련 팩트체크</a>
                   <a target="_blank" class="btn btn-primary" style="width:100%; margin-bottom:1rem;" href="https://www.notion.so/381a1f09e420476c839cdbe543dbb3bb" role="button">소상공인 지원사업</a>
                   <a target="_blank" class="btn btn-primary" style="width:100%" href="https://neighbor-house.tistory.com/148" role="button">아이돌봄 지원사업</a>
+                  <a target="_blank" class="btn btn-primary" style="width:100%" href="http://news.seoul.go.kr/welfare/archives/515867" role="button">서울시 재난긴급생활비</a>
                 </div>
               </div>
             </div>
