--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body" id="Top5">
-                  <h4 class="small font-weight-bold">
+                  <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4">
@@ -377,7 +377,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold">
+                  <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4">
@@ -385,7 +385,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold">
+                  <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4">
@@ -393,7 +393,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold">
+                  <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4">
@@ -401,7 +401,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold">
+                  <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4">
@@ -409,7 +409,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold">
+                  <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4">
@@ -417,7 +417,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold">
+                  <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4">
@@ -425,7 +425,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold">
+                  <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4">
@@ -433,7 +433,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold">
+                  <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4">
@@ -441,7 +441,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold">
+                  <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4">
@@ -449,7 +449,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold">
+                  <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4">
@@ -457,7 +457,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold">
+                  <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4">
@@ -465,7 +465,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold">
+                  <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4">
@@ -473,7 +473,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold">
+                  <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4">
@@ -481,7 +481,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold">
+                  <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4">
