최상단 업데이트 데이터 출처 명시

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <img src='img/live.svg' /> 라이브 코로나 맵
     </h1>
     <h6 class="float-right">
-      <div class="m-update">UPDATE : <span id="text-update-datetime" class="text-update"></span></div><div class="m-none">(일일 자정 질병관리본부 브리핑 자료)</div>
+      <div class="m-update">UPDATE : <span id="text-update-datetime" class="text-update"></span></div><div class="m-none">(한국데이터 : 일일 자정 질병관리본부 브리핑 자료, 해외데이터 : 존스홉킨스 코로나맵 데이터)</div>
     </h6>
     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle">
         <i class="fas fa-chevron-circle-left"></i>
