--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                   <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
-                  <div class="progress mb-4">
+                  <div class="progress mb-4 top_progress">
                     <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
@@ -380,7 +380,7 @@
                   <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
-                  <div class="progress mb-4">
+                  <div class="progress mb-4 top_progress">
                     <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
@@ -388,7 +388,7 @@
                   <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
-                  <div class="progress mb-4">
+                  <div class="progress mb-4 top_progress">
                     <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
@@ -396,7 +396,7 @@
                   <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
-                  <div class="progress mb-4">
+                  <div class="progress mb-4 top_progress">
                     <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
@@ -404,7 +404,7 @@
                   <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
-                  <div class="progress mb-4">
+                  <div class="progress mb-4 top_progress">
                     <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
@@ -412,7 +412,7 @@
                   <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
-                  <div class="progress mb-4">
+                  <div class="progress mb-4 top_progress">
                     <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
@@ -420,7 +420,7 @@
                   <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
-                  <div class="progress mb-4">
+                  <div class="progress mb-4 top_progress">
                     <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
@@ -428,7 +428,7 @@
                   <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
-                  <div class="progress mb-4">
+                  <div class="progress mb-4 top_progress">
                     <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
@@ -436,7 +436,7 @@
                   <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
-                  <div class="progress mb-4">
+                  <div class="progress mb-4 top_progress">
                     <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
@@ -444,7 +444,7 @@
                   <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
-                  <div class="progress mb-4">
+                  <div class="progress mb-4 top_progress">
                     <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
@@ -452,7 +452,7 @@
                   <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
-                  <div class="progress mb-4">
+                  <div class="progress mb-4 top_progress">
                     <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
@@ -460,7 +460,7 @@
                   <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
-                  <div class="progress mb-4">
+                  <div class="progress mb-4 top_progress">
                     <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
@@ -468,7 +468,7 @@
                   <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
-                  <div class="progress mb-4">
+                  <div class="progress mb-4 top_progress">
                     <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
@@ -476,7 +476,7 @@
                   <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
-                  <div class="progress mb-4">
+                  <div class="progress mb-4 top_progress">
                     <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
@@ -484,7 +484,7 @@
                   <h4 class="small font-weight-bold top_title">
                     <span class="float-right"></span>
                   </h4>
-                  <div class="progress mb-4">
+                  <div class="progress mb-4 top_progress">
                     <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
